--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -8,7 +8,7 @@
     <title>microblog</title>
     {% endif %}
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/bootstrap.min.css') }}">
-
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-1.11.1.min.js") }}"></script>
   </head>
   <body>
     <div>Microblog:
