--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -7,7 +7,8 @@
     {% else %}
     <title>microblog</title>
     {% endif %}
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/bootstrap.min.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/bootstrap.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/style.css') }}">
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-1.11.1.min.js") }}"></script>
   </head>
   <body>
@@ -27,5 +28,8 @@
     {% endwith %}
     {% block body %}{% endblock %}
   </body>
-<a href="{{ url_for('logout') }}">Logout</a>
+{% if current_user.is_authenticated %}
+        | <a href="{{ url_for('user', username = current_user.username) }}">Your Profile</a>
+        | <a href="{{ url_for('logout') }}">Logout</a>
+{% endif %}
 </html>
