--- a/application/templates/single_product.html
+++ b/application/templates/single_product.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% block body %}
 <h1> {{ product.title }}</h1>
+<td> <img src="{{ url_for('static',filename="media/" + product.image) }}" /> </td>
 <div id="vote_count">{{ product.vote_count }}</div>
 <p>
 {{ product.description }}
-<a href="#" OnClick="DoAction('{{product.vote_count}}');" >Vote</a>
+<a href="#" OnClick="DoAction(event);" >Vote</a>
 </p>
 <div id="comment" deep="0">
     {% include "product_comments.html" %}
 </div>
 <h1>Add comment</h1>
-<form action="{{ url_for($SCRIPT_ROOT +'singleproduct', product_id=product.id  ) }}" method="post" class="form-horizontal comment_form"/>
+<form action="{{ url_for('singleproduct', product_id=product.id  ) }}" method="post" class="form-horizontal comment_form"/>
     <div class="control-group">
         <div class="controls">
              {{form.hidden_tag()}}
@@ -37,15 +38,15 @@
   </form>
 
 <script type="text/javascript">
-$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 
 
-function DoAction(   )
+function DoAction( event  )
 {
+    event.preventDefault();
     alert(123);
     $.ajax({
          type: 'POST',
-         url: "{{ url_for('singleproduct', product_id=product.id) }}",
+         url: "{{ url_for('like_product', product_id=product.id) }}",
          success: function(data){
              $('#vote_count').html(data);
          }
@@ -58,7 +59,7 @@ $(".comment_form").submit(function (form) {
         data: $(".comment_form").serialize(),
         success: function (data) {
             $("#comment").html(data.comments);
-            $('"textarea#text"').val("");
+            $("textarea#text").val("");
 
         },
         error: function (xhr, str) {
