--- a/application/templates/add_product.html
+++ b/application/templates/add_product.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <h1>Add post</h1>
-<form action="" method="post" class="form-horizontal">
+<form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
     <div class="control-group">
         <div class="controls">
             {% for field in form %}
