--- a/application/static/style/style.css
+++ b/application/static/style/style.css
@@ -1,16 +1,37 @@
 
-div[deep="2"] {
-    margin-left: 30px;
-    border-style: solid;
-    border-width: 0.5px;
+
+div#header.row{
+    background-image: url("/static/image/header-background.png");
+    width:100%;
+    height:80px;
+    margin: 0px;
 }
-div[deep="3"] {
-    margin-left: 60px;
-    border-style: solid;
-    border-width: 0.5px;
+
+div#sidebar{
+
+
+    padding: 0px;
 }
-div[deep="4"] {
-    margin-left: 90px;
-    border-style: solid;
-    border-width: 0.5px;
+div#main{
+    padding: 0px;
+
+
+
+}
+
+#body{
+    margin: 0px;
+    margin-top: 10px;
+}
+div#user_infs {
+    padding: 0px;
+}
+div#user_about{
+    padding: 0px;
+
+
+}
+#max_avatar img  {
+    border-radius: 8px;
+    width: 220px;
 }
