--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -7,29 +7,62 @@
     {% else %}
     <title>microblog</title>
     {% endif %}
+      <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/style.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/bootstrap.css') }}">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/style.css') }}">
+
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-1.11.1.min.js") }}"></script>
   </head>
   <body>
-    <div>Microblog:
-        <a href="{{ url_for('index') }}">Home</a>
+    <div class="container-fluid">
+      <div class="row" id="header">
 
+        <div class="col-md-3">
+
+          <a href="{{ url_for('index') }}"><img src="{{ url_for('static',filename="image/logo.png") }}"  width="80"/></a>
+        </div>
+          {% if current_user.is_authenticated %}
+            <div class="col-md-1 col-md-offset-5">
+            <img src="{{ url_for('static',filename="media/" + current_user.avatar) }}" width="80"/>
+            </div>
+            <div class="col-md-2">
+                <h4>| <a href="{{ url_for('user', username = current_user.username) }}">{{current_user.username}}</a></h4>
+            </div>
+            <div class="col-md-1">
+                <h4>| <a href="{{ url_for('logout') }}">Logout</a><h4>
+            </div>
+
+          {% else %}
+            <div class="col-md-1 col-md-offset-6">
+                <h4> | <a href="{{ url_for('login') }}">Login</a></h4>
+            </div>
+            <div class="col-md-2">
+               <h4>  | <a href="{{ url_for('register') }}">Register</a></h4>
+            </div>
+
+
+         {% endif %}
+      </div>
+      <div class="row" id="body">
+          <div class="col-md-3" id = "sidebar">
+                {% block sidebar %}
+                    dfghj
+                {% endblock %}
+          </div>
+          <div class="col-md-9" id ="main">
+
+                {% block body %}{% endblock %}
+              {% with messages = get_flashed_messages() %}
+              {% if messages %}
+              <ul>
+              {% for message in messages %}
+                  <li>{{ message }} </li>
+              {% endfor %}
+              </ul>
+              {% endif %}
+              {% endwith %}
+
+        </div>
     </div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-    {% for message in messages %}
-        <li>{{ message }} </li>
-    {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-    {% block body %}{% endblock %}
+  </div>
   </body>
-{% if current_user.is_authenticated %}
-        | <a href="{{ url_for('user', username = current_user.username) }}">Your Profile</a>
-        | <a href="{{ url_for('logout') }}">Logout</a>
-{% endif %}
 </html>
