--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -1,22 +1,93 @@
 {% extends "base.html" %}
 
 {% block body %}
+    <div class="row">
+      <div class="col-md-4" id="user_inf">
+          <h2>{{user.username}}</h2>
+          <div id="max_avatar">
+            <img src="{{ url_for('static',filename="media/" + user.avatar) }}" />
+          </div>
+          {% if user.id == g.user.id %}<p><a href="{{url_for('user_edit', id = user.id )}}">Edit</a></p>{% endif %}
 
-<table>
-    <tr valign="top">
-        <td> <img src="{{ url_for('static',filename="media/" + user.avatar) }}" /> </td>
-        <td><h1>User: {{user.username}}</h1></td>
-        {% if user.about_me %}<p>{{user.about_me}}</p>{% endif %}
-        {% if user.last_seen %}<p><i>Last seen on: {{user.last_seen}}</i></p>{% endif %}
-        {% if user.id == g.user.id %}<p><a href="{{url_for('user_edit', id = user.id )}}">Edit</a></p>{% endif %}
-    </tr>
-</table>
-<hr>
-{% for post in posts %}
-<table>
-    <tr valign="top">
-        <td><img src="{{post.author.picture}}"></td><td><i>{{post.author.username}} says:</i><br>{{post.body}}</td>
-    </tr>
-</table>
-{% endfor %}
+
+
+
+      </div>
+      <div class="col-md-5" id = user_about>
+          {% if user.last_seen %}<p><i>Last seen on: {{user.last_seen}}</i></p>{% endif %}
+          Registered on: {{user.registered_on}}</i></p>
+          {% if user.about_me %}
+            <p>{{user.about_me}}</p>
+          {% else %}
+            <p>Could you tell something about you?</p>
+            <a href="{{url_for('user_edit', id = user.id )}}">Edit</a>
+
+          {% endif %}
+      </div>
+    </div>
+
+
+    <div class="row" id = "user_activ">
+        <div class="row">
+            <div class="col-md-3">
+                <button type="button" class="btn btn-default btn-block" id = "post_block">Post</button>
+            </div>
+            <div class="col-md-3">
+                <button type="button" class="btn btn-default btn-block" id = "comment_block">Comment</button>
+            </div>
+             <div class="col-md-3">
+                 <button type="button" class="btn btn-default btn-block" id = "product_block">Product</button>
+             </div>
+
+        </div>
+        <div id="active_contain">
+             {% include 'user_contain_post.html' %}
+
+        </div>
+    </div>
+
+<script>
+$( "#comment_block" ).click(function() {
+      $.ajax({
+        type: "POST",
+        url: "{{url_for('user_contain' )}}",
+        data: "user_id="+ "{{user.id}}" + "&comment=1",
+        success: function (data) {
+            $("#active_contain").html(data.com_container);
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+});
+
+
+$( "#product_block" ).click(function() {
+      $.ajax({
+        type: "POST",
+        url: "{{url_for('user_contain' )}}",
+        data: "user_id="+ "{{user.id}}" + "&product=1",
+        success: function (data) {
+            $("#active_contain").html(data.prod_container);
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+});
+
+$( "#post_block" ).click(function() {
+      $.ajax({
+        type: "POST",
+        url: "{{url_for('user_contain' )}}",
+        data: "user_id="+ "{{user.id}}" + "&post=1",
+        success: function (data) {
+            $("#active_contain").html(data.post_container);
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+});
+</script>
 {% endblock %}
